# Bsh

./: .gitignore  Doxyfile  Makefile  README.md  build.ninja  meson.build
src/: bsh.c  bsh.h
src/ast_evaluation/: ast_evaluation.c  ast_evaluation.h  ast_evaluation_tools.h  builtin_exec.c  inner_exec.c  pipe.c  pretty_print.c  prog_exec.c  redir.c  redir.h  redir_tools.c  redir_tools.h
src/builtins/: break.c  builtins.c  builtins.h  cd.c  continue.c  dot.c  echo.c  exit.c  export.c  unset.c
src/functions/: functions.c  functions.h
src/lexer/: alias.c  create_token.c  export.c  ionumbers.c  keywords.c  lexer.c  lexer.h  lexer_print.c  lexer_tools.h  spaces.c  spaces.h  split_input.c
src/loops/: loop_stack.c  loop_stack.h
src/parser/: ast.c  ast.h  parse_functions.c  parser.c  parser.h  parser_commands.c  parser_conditions.c  parser_high_level.c  parser_loops.c
src/shell_input/: shell_input.c  shell_input.h
src/variables/: var_list.c  var_list.h
tests/: alias.yml  case.yml  cd.yml  cmd_substitution.yml  command_list.yml  continue_and_break.yml  echo.yml  expansion.yml  for.yml  functions.yml  moulinette.py  pipes.yml  reserved_words.yml  spaces_between_quotes.yml  subshells.yml  variable.yml  wrong_commands.yml
tests/aliases/: basic.sh
tests/break_and_continue/: 1_break.sh  4_break.sh  5_break_4_loop.sh
tests/case/: basic.sh  case_in_function.sh  if_in_case_in_if.sh  multiple_condition_case.sh
tests/cmd_substitution/: backticks.sh  basic.sh  with_while_loop.sh
tests/echo/: very_long.sh
tests/for/: basic.sh  for_in_for.sh  for_in_variables.sh  mixed.sh  multiple.sh  no_args_no_in.sh
tests/functions/: arguments.sh  arguments_hard.sh  basic.sh  declaration_in_if.sh  function_in_function.sh  multiple_calls.sh  recursive_call.sh  use_fun_in_other_cmd.sh  variable_in_fun.sh
tests/subshells/: basic.sh  fun_in_subshell.sh  multiple_variables.sh  subshell_in_subshell.sh
